# binocular

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  lib.rs  main.rs  rg_item.rs  tui.rs
src/pickers/: grep.rs  mod.rs
