[package]
name = "binocular"
authors = ["Maria José Solano <majosolano99@gmail.com>"]
description = "Binocular vision for your terminal"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/MariaSolOs/binocular"
license = "Apache-2.0"
readme = "README.md"
keywords = ["regex", "search", "pattern"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.72"
crossterm = { version = "0.26.1", features = ["event-stream"] }
dirs = "5.0.1"
ratatui = { version = "0.22.0", features = ["serde"] }
serde = { version = "1.0.180", features = ["serde_derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = "0.1.14"
tui-input = "0.7.1"
